# logic2ableton

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  logic2ableton.spec  pyproject.toml
.github/workflows/: release.yml
app/: electron-builder.yml  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
app/scripts/: generate-mac-icon.mjs
app/src/main/: converter.ts  index.ts
app/src/preload/: index.ts
app/src/renderer/: index.html
app/src/renderer/src/: App.tsx  env.d.ts  main.tsx
app/src/renderer/src/assets/: main.css
app/src/renderer/src/components/: ConversionComplete.tsx  ConversionProgress.tsx  DropZone.tsx  ProjectPreview.tsx  Sidebar.tsx
app/src/renderer/src/hooks/: useAppState.ts
docs/plans/: 2026-02-15-logic-ableton-converter-design.md  2026-02-15-logic-ableton-converter-impl.md
logic2ableton/: __main__.py  ableton_generator.py  ableton_parser.py  cli.py  logic_parser.py  logic_transfer.py  models.py  plugin_database.py  plugin_matcher.py  report.py  vst3_scanner.py
logic2ableton/data/: DefaultLiveSet.als
scripts/: create_sample_als_fixture.py
tests/: conftest.py  test_ableton_generator.py  test_ableton_parser.py  test_cli.py  test_cli_reverse.py  test_logic_parser.py  test_logic_transfer.py  test_models.py  test_plugin_database.py  test_plugin_matcher.py  test_report.py  test_vst3_scanner.py
